# GENAI-Common-repo

./: .gitignore  README.md  python.ipynb  req.txt
DATA_QUERY_AGENT/: .env.example  .gitignore  Dockerfile  PROJECT_WHITEPAPER.txt  README.md  docker-compose.yml  pyproject.toml  requirements.txt
DATA_QUERY_AGENT/configs/: metadata_example.json  question_example.txt
DATA_QUERY_AGENT/scripts/: run_local.ps1  run_local.sh
DATA_QUERY_AGENT/src/llm_spark_pipeline/: __main__.py  cli.py  config.py  logging.py  pipeline.py
DATA_QUERY_AGENT/src/llm_spark_pipeline/io/: output.py  s3.py
DATA_QUERY_AGENT/src/llm_spark_pipeline/llm/: extractor.py  prompt_templates.py
DATA_QUERY_AGENT/src/llm_spark_pipeline/spark/: executor.py  session.py
DATA_QUERY_AGENT/src/llm_spark_pipeline/validation/: schema.py  validator.py
JD_RESUME_MATCH_MAKER/: notebok.ipynb
JD_RESUME_MATCH_MAKER/data/JD/: jd-1.txt  jd-2.txt  jd-3.txt  jd-4.txt  jd-5.txt
JD_RESUME_MATCH_MAKER/data/Resume/: Resume-1.txt  Resume-3.txt  Resume-4.txt  Resume-5.txt
LLM_INFERENCE_SERVICE/: .dockerignore  Dockerfile  README.md  requirements.txt
LLM_INFERENCE_SERVICE/app/: flask_app.py  main.py  model.py  schema.py
TEXT_TO_CODE_AGENT/: README.md  setup_project.py
