[project]
name = "llm-spark-pipeline"
version = "0.1.0"
description = "LLM-driven action planner with Spark execution"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "langchain==0.2.17",
  "langchain-openai==0.1.22",
  "pydantic==2.9.2",
  "pydantic-settings==2.5.2",
  "python-dotenv==1.0.1",
  "typer==0.12.3",
  "rich==13.7.1",
  "boto3==1.35.30",
  "pandas==2.2.3",
  "openpyxl==3.1.5",
  "pyspark==3.5.2",
]

[project.scripts]
llm-spark-pipeline = "llm_spark_pipeline.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

